--- a/patterns/Forms/dropbar.html
+++ b/patterns/Forms/dropbar.html
@@ -12,10 +12,13 @@
   <link href="forms.css" rel="stylesheet">
 </head>
 <body>
-  <form class="push-0" method="POST" action="https://formspree.io/paulinamssio@hotmail.com">
-    <div class="push">
-      <label for="name">Name</label>
-      <input id="name" name="name">
-    </div>
-  </form>
+  <div class="push">
+    <label for="subject">How much quantity</label>
+    <select id="subject" name="_subject">
+      <option>1</option>
+      <option>5</option>
+      <option>10</option>
+    </select>
+  </div>
+</body>
 </head>
