--- a/patterns/Forms/textarea.html
+++ b/patterns/Forms/textarea.html
@@ -12,10 +12,14 @@
   <link href="forms.css" rel="stylesheet">
 </head>
 <body>
-  <form class="push-0" method="POST" action="https://formspree.io/paulinamssio@hotmail.com">
-    <div class="push">
-      <label for="name">Name</label>
-      <input id="name" name="name">
-    </div>
-  </form>
+  <div class="push">
+    <label for="details">Enter text here</label>
+    <textarea id="details" name="message"></textarea>
+  </div>
+  <div>
+    <button class="btn btn-light" type="submit" value="send">Send message</button>
+  </div>
+</form>
+</div>
+</body>
 </head>
