--- a/patterns/Forms/emailinput.html
+++ b/patterns/Forms/emailinput.html
@@ -9,6 +9,7 @@
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="../buttons/buttons.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
   <link href="forms.css" rel="stylesheet">
 </head>
 <body>
