commit for sections and navigation

--- a/patterns/brand/2-colours.html
+++ b/patterns/brand/2-colours.html
@@ -41,7 +41,7 @@
     <section>
       <h2 class="patternbot-color-body giga push-1-4">Primary colours</h2>
         <div class="patternbot-max-length italic max-length">
-          <p>These colors are used for heading, h1</p>
+          <p>These colors are used for headings and h1s, the primary colours are also used for most of the website.</p>
 
         </div>
 
@@ -98,7 +98,7 @@
 
       <h2 class="patternbot-color-body giga push-1-4">Secondary colours</h2>
         <div class="patternbot-max-length italic max-length">
-          <p>These colours are used for headings</p>
+          <p>These colours are used for headings and button hovers to help create contrast in the website.</p>
 
         </div>
 
@@ -136,7 +136,7 @@
 
       <h2 class="patternbot-color-body giga push-1-4">Accent colours</h2>
         <div class="patternbot-max-length italic max-length">
-          <p>This is used for accents.</p>
+          <p>This is used for accents and areas that need a darker colour to help make other colours standout.</p>
 
         </div>
       <ul class="patternbot-color-swatch-labels patternbot-color-body patternbot-list-group list-group-inline milli push-0">
