--- a/index.html
+++ b/index.html
@@ -818,9 +818,9 @@
 &lt;link href="buttons.css" rel="stylesheet">
 
 
-&lt;a class="btn" href="#"> Standard Button&lt;/a>
-&lt;a class="btn btn-light" href="#"> light Button&lt;/a>
-&lt;a class="btn btn-ghost" href="#"> ghost Button&lt;/a>
+&lt;a class="btn text-center" href="#"> Standard Button&lt;/a>
+&lt;a class="btn btn-light text-center" href="#"> light Button&lt;/a>
+&lt;a class="btn-ghost text-center" href="#"> ghost Button&lt;/a>
 </pre></code>
             </div>
           </div>
@@ -1418,9 +1418,6 @@
   &lt;label for="details">Enter text here&lt;/label>
   &lt;textarea id="details" name="message">&lt;/textarea>
 &lt;/div>
-&lt;div>
-  &lt;button class="btn btn-light" type="submit" value="send">Send message&lt;/button>
-&lt;/div>
 </pre></code>
             </div>
           </div>
@@ -1567,11 +1564,15 @@
                 </i>
               </button>
               <code><pre id="sections-nav-checkout-code-sample-copy-chunk">&lt;nav&gt;
-  &lt;ul class="nav-list push-0 list-group">
-    &lt;li class="island nav-bg text-align"> &lt;a class="nav-checkout link-box nav-bg" href="#">Personal Info&lt;/a>&lt;/li>
-    &lt;li class="island text-align"> &lt;a class="nav-checkout link-box" href="#">Shipping Info&lt;/a>&lt;/li>
-    &lt;li class="island text-align"> &lt;a class="nav-checkout link-box" href="#">Payment Info&lt;/a>&lt;/li>
-  &lt;/ul>
+  &lt;div class="unit xs-1 s-1 m-1 l-1-2 pad-t-1-2 pad-b-1-2">
+    &lt;nav>
+      &lt;ul class="list-group-inline push-0">
+        &lt;li class="pad-t-1-8 pad-b-1-8 gutter-1-4">&lt;a class="pad-t-1-8 pad-b-1-4 mega" href="#">Personal info&lt;/a>&lt;/li>
+        &lt;li class="pad-t-1-8 pad-b-1-8 gutter-1-4">&lt;a class="pad-t-1-8 pad-b-1-4 mega" href="#">Checkout info&lt;/a>&lt;/li>
+        &lt;li class="pad-t-1-8 pad-b-1-8 gutter-1-4">&lt;a class="pad-t-1-8 pad-b-1-4 mega" href="#">Payment info&lt;/a>&lt;/li>
+      &lt;/ul>
+    &lt;/nav>
+  &lt;/div>
 &lt;/nav>
 </pre></code>
             </div>
