--- a/patterns/buttons/buttons.html
+++ b/patterns/buttons/buttons.html
@@ -14,7 +14,7 @@
   <link href="buttons.css" rel="stylesheet">
 </body>
 
-  <a class= "btn" href="#"> Standard Button</a>
-    <a class= "btn btn-light" href="#"> light Button</a>
-    <a class= "btn btn-ghost" href="#"> ghost Button</a>
+  <a class= "btn text-center" href="#"> Standard Button</a>
+    <a class= "btn btn-light text-center" href="#"> light Button</a>
+    <a class= "btn-ghost text-center" href="#"> ghost Button</a>
 </html>
