--- a/patterns/sections/nav-checkout.html
+++ b/patterns/sections/nav-checkout.html
@@ -13,11 +13,14 @@
 </head>
 <body>
   <nav>
-    <ul class="nav-list push-0 list-group">
-      <li class="island nav-bg text-align"> <a class="nav-checkout link-box nav-bg" href="#">Personal Info</a></li>
-      <li class="island text-align"> <a class="nav-checkout link-box" href="#">Shipping Info</a></li>
-      <li class="island text-align"> <a class="nav-checkout link-box" href="#">Payment Info</a></li>
-    </ul>
-  </nav>
+    <div class="unit xs-1 s-1 m-1 l-1-2 pad-t-1-2 pad-b-1-2">
+      <nav>
+        <ul class="list-group-inline push-0">
+          <li class="pad-t-1-8 pad-b-1-8 gutter-1-4"><a class="pad-t-1-8 pad-b-1-4 mega" href="#">Personal info</a></li>
+          <li class="pad-t-1-8 pad-b-1-8 gutter-1-4"><a class="pad-t-1-8 pad-b-1-4 mega" href="#">Checkout info</a></li>
+          <li class="pad-t-1-8 pad-b-1-8 gutter-1-4"><a class="pad-t-1-8 pad-b-1-4 mega" href="#">Payment info</a></li>
+        </ul>
+      </nav>
+    </div>
 </body>
 </html>
