this commit adds link section

--- a/index.html
+++ b/index.html
@@ -1432,6 +1432,7 @@
       <nav class="pattern-nav">
         <ol class="list-group-inline push-1-4 pad-b-1-4">
             <li><a href="#sections--intro-text">Intro text</a></li>
+            <li><a href="#sections--links-section">Links section</a></li>
             <li><a href="#sections--nav-checkout">Nav checkout</a></li>
         </ol>
       </nav>
@@ -1499,6 +1500,91 @@
   &lt;h1 class="push-1">This is an H1.&lt;/h1>
   &lt;p>This is for talking about a product or other company information.&lt;/p>
 &lt;/div>
+</pre></code>
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="pattern-details " id="sections--links-section" style="">
+        <div class="pattern-toolbar pattern-toolbar-inner relative gutter pad-t-1-4 pad-b-1-4" style="">
+          <h3 class="pattern-name tera push-1-8">Links section</h3>
+            <ul class="list-group-inline gutter absolute pin-cr">
+                <li>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="sections-links-section-code-sample">
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-code"></use></svg>
+                    </i>
+                  </button>
+                </li>
+                <li>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-include-btn" title="Copy include" aria-label="Copy include" data-copy-include-pattern="sections/links-section" hidden>
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-copy"></use></svg>
+                    </i>
+                  </button>
+                </li>
+                <li>
+                  <a class="btn center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/sections/links-section.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-pop-out"></use></svg>
+                    </i>
+                  </a>
+                </li>
+            </ul>
+        </div>
+
+      <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
+        <div class="gutter-2 pad-t-1-2 pad-b-1-2">
+          <div class="resizeable-pattern relative" style="">
+            <i class="icon i-32 patternbot-iframe-loading-gears absolute pin-c"><svg><use xlink:href="#patternbot-iframe-loading-gears"></use></svg></i>
+            <iframe data-src="patterns/sections/links-section.html" scrolling="no" onload="resizeIframe(this)"  ></iframe>
+              <div class="resizeable-pattern-length">
+                <div class="resize-handle resize-handle-left" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+                <div class="resize-handle resize-handle-right" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+              </div>
+          </div>
+        </div>
+
+          <div class="pattern-code-wrap gutter pad-t-1-2 pad-b-1-2" hidden aria-hidden="true" id="sections-links-section-code-sample" tabindex="-1">
+            <div class="pattern-code relative milli island-1-2" style="">
+              <button class="center-contents-vertical pattern-tool-btn pattern-copy-btn absolute pin-tr" title="Copy code" aria-label="Copy code" data-clipboard-target="#sections-links-section-code-sample-copy-chunk" hidden>
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-copy"></use></svg>
+                </i>
+              </button>
+              <code><pre id="sections-links-section-code-sample-copy-chunk">&lt;section&gt;
+  &lt;footer class="gutter pad-t">
+    &lt;div class="footer-content grid">
+    &lt;/div>
+    &lt;div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3">
+      &lt;div>
+        &lt;p class="social-header mega bold push-0">More contact info&lt;/p>
+      &lt;/div>
+      &lt;ul class="list-group-inline">
+        &lt;li>
+        &lt;/li>
+        &lt;li>
+          &lt;a href="#">
+              &lt;i>&lt;img class="img-s social-icon" src="../../images/icon-instagram.png" alt="">&lt;/i>
+            &lt;/a>
+        &lt;/li>
+        &lt;li>
+          &lt;a href="#">
+              &lt;i>&lt;img class="img-s social-icon" src="../../images/icon-twitter.png" alt="">&lt;/i>
+            &lt;/a>
+        &lt;/li>
+      &lt;/ul>
+    &lt;/div>
+  &lt;/footer>
+&lt;/section>
 </pre></code>
             </div>
           </div>
